;;;; -*- coding: utf-8; -*-
changes in sbcl-0.9.19 (1.0.0?) relative to sbcl-0.9.18:
  * improvement: floating point modes in effect are now saved in
    core, and restored on startup.
  * improvement: GET-INTERNAL-REAL-TIME now reports the time since
    startup, not time since first call to GET-INTERNAL-REAL-TIME.
  * improvement: SAVE-LISP-AND-DIE explicitly checks that multiple
    threads are not running after *SAVE-HOOKS* have run.
  * improvement: floating-point exception handling should work on all
    POSIX platforms (thanks to NIIMI Satoshi)
  * bug fix: compiler bug triggered by a (non-standard) VALUES
    declaration in a LET* was fixed. (reported by Kaersten Poeck)
  * bug fix: file compiler no longer confuses validated and already
    dumped structurres. (reported by Kaersten Poeck)
  * bug fix: ADJUST-ARRAY :FILL-POINTER T on an array without a
    fill-pointer signals a type-error as required. (thanks to
    Lars Brinkhoff)
  * bug fix: disassemly of funcallable instances works.
  * bug fix: single stepping on PPC.
  * bug fix: fix thread-safety problems in the type system (generally 
    manifesting as nonsensical errors like "STRING is a bad type specifier 
    for sequences" or "The value 1 is not of type FIXNUM")
  * Improvements to the Windows port:
    ** floating point exceptions are now reported correctly.
    ** stack exhaustion detection works partially.
    ** more accurate GET-INTERNAL-REAL-TIME.
    ** better RUN-PROGRAM behaviour in case of errors in the child
       process.
    ** PROBE-FILE now simplifies pathnames correctly.
    ** DIRECTORY now works correctly with :WILD-INFERIORS.
    ** DECODE-UNIVERSAL-TIME works on times before 00:00:00 January
       1st 1970 (although time timezone data will be unreliable).
    ** Hyperbolic functions TANH, ASINH, ACOSH, and ATANH work.

changes in sbcl-0.9.18 (1.0.beta?) relative to sbcl-0.9.17:
  * enhancement: SB-POSIX now supports cfsetispeed(3), cfsetospeed(3),